formatting the README

--- a/README.textile
+++ b/README.textile
@@ -2,15 +2,15 @@ h2. Notifixite
 
 h3. What is it?
 
-Notifixite is a simple RSS to IM bot.
+"Notifixite":http://notifixlite.appspot.com/ is a simple RSS to IM bot.
 
 h3. Usage 
 
-Just add <code>notifixlite@appspot.com</code> to your contact on gtalk (using any XMPP client). and get started by saying <code>/help></code>.
+Just add <code>notifixlite@appspot.com</code> to your contact on gtalk (using any "XMPP client":http://xmpp.org/xmpp-software/clients/). and get started by saying <code>/help></code>.
 
 h3. TODO
 
 * Google Reader import
 * Web interface to consult history
-* Add a <code>/track<code> command that directly uses Superfeedr's track feeds.
+* Add a <code>/track<c/ode> command that directly uses Superfeedr's "track feeds":http://superfeedr.com/documentation#track.
 * Allow to get started from the web app, rather than from an XMPP client.
