fixing Typo in README

--- a/README.textile
+++ b/README.textile
@@ -12,5 +12,5 @@ h3. TODO
 
 * Google Reader import
 * Web interface to consult history
-* Add a <code>/track<c/ode> command that directly uses Superfeedr's "track feeds":http://superfeedr.com/documentation#track.
+* Add a <code>/track</code> command that directly uses Superfeedr's "track feeds":http://superfeedr.com/documentation#track.
 * Allow to get started from the web app, rather than from an XMPP client.
